--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -53,11 +53,6 @@ a {
       margin-top: 1rem;
       margin-left: 0; } }
 
-.page-header {
-  color: #fff;
-  text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -243,3 +238,13 @@ a {
 @media screen and (max-width: 42em) {
   .site-footer {
     font-size: 0.9rem; } }
+
+/* My custom styles */
+
+.page-header {
+  color: #fff;
+  text-align: center;
+  background-color:  #000E78 ; }
+.main-content h3 {
+  color: #000E78;}
+
